--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -1,5 +1,6 @@
 /* IMPORT FONTS */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;0,900;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import "variables.css";
 
 /* GLOBAL */
 html,
@@ -8,6 +9,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Roboto", sans-serif;
+  color: var(--dark);
 }
 
 *,
