--- a/src/assets/styles/variables.css
+++ b/src/assets/styles/variables.css
@@ -5,8 +5,9 @@
   --light: #fafaf9;
   --lightgray: #f1f5f9;
 
-  --font-size-sm: 1rem;
+  --font-size-sm: 0.9rem;
+  --font-size-normal: 1rem;
   --font-size-md: 1.2rem;
   --font-size-lg: 1.5rem;
-  --font-size-xl: 2rem;
+  --font-size-xl: 1.7rem;
 }
