--- a/src/assets/styles/typography.css
+++ b/src/assets/styles/typography.css
@@ -4,28 +4,28 @@ h1 {
   font-weight: 600;
   font-size: var(--font-size-xl);
   margin-top: 0;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0;
 }
 
 h2 {
   font-weight: 600;
   font-size: var(--font-size-lg);
   margin-top: 0;
-  margin-bottom: 1.3rem;
+  margin-bottom: 0;
 }
 
 h3 {
   font-weight: 600;
   font-size: var(--font-size-normal);
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
 }
 
 h4 {
   font-weight: 500;
   font-size: var(--font-size-normal);
   margin-top: 0;
-  margin-bottom: 1rem;
+  margin-bottom: 0;
 }
 
 h1:first-letter,
